# TinyC-Compiler-Frontend

./: .gitignore  .gitlab-ci.yml  README.md
paper/: structure.md  thesis.tex
paper/code/: schema.json
paper/text/: appendix.tex  bib-database.bib  grammar.tex  medium.tex  text.tex
paper/text/appendices/: grammar.tex  schema.tex
paper/text/architecture/: Design Requirements & Architecture.tex
paper/text/conclusion/: Conclusion.tex
paper/text/evaluation/: evaluation.tex
paper/text/existing-solutions/: exisiting-solutions.tex
paper/text/introduction/: intoduction.tex  introduction.tex
paper/text/other/: attachments.tex
paper/text/theoretical-background/: ast-and-conclusion.tex  compilation-process.tex  formal-languages.tex  lexical-analysis.tex  syntax-analysis.tex
project/: CMakeLists.txt  Doxyfile  Grammar_LL1.txt  README.md
project/docs/: ast-documentation.md  tinyc-ast-schema.json
project/docs/grammar/: Grammar_LL1.txt  Grammar_reference.md  LL1 tests one line.txt  LL1 tests.txt
project/examples/: 10_pointers.tc  11_function_pointers.tc  12_casting.tc  13_void_pointers.tc  14_complex_expression.tc  15_nested_blocks.tc  16_parser_error.tc  17_lexer_error.tc  1_hello_world.tc  2_variables.tc  3_arithmetic.tc  4_logical.tc  5_functions.tc  6_if_else.tc  7_loops.tc  8_switch_case.tc  9_structs.tc  function.tc  globals.tc  if_statement.tc  variables.tc
project/grammar/: Grammar_LL1.txt
project/include/tinyc/ast/: ASTNode.h  NodeVisitor.h
project/include/tinyc/ast/visitors/: DumpVisitor.h  JSONVisitor.h
project/include/tinyc/lexer/: Lexer.h  Token.h
project/include/tinyc/parser/: Parser.h
project/src/: main.cpp
project/src/ast/: ASTNode.cpp  BaseNodes.cpp  DeclarationNodes.cpp  ExpressionNodes.cpp  ProgramNode.cpp  StatementNodes.cpp  TypeNodes.cpp
project/src/ast/visitors/: DumpVisitor.cpp  JSONVisitor.cpp
project/src/lexer/: Lexer.cpp  Token.cpp
project/src/parser/: Parser.cpp  ParserDeclarationNodes.cpp  ParserExpressionNodes.cpp  ParserStatementNodes.cpp  ParserTypeNodes.cpp
project/test_suite/: README.md  test_generator.py  test_runner.py  tinyc-ast-schema.json
project/test_suite/json/: 14_complex_expression.json  9_structs.json
project/test_suite/samples/: 10_pointers.tc  11_function_pointers.tc  12_casting.tc  13_void_pointers.tc  14_complex_expression.tc  15_nested_blocks.tc  16_parser_error.tc  17_lexer_error.tc  1_hello_world.tc  2_variables.tc  3_arithmetic.tc  4_logical.tc  5_functions.tc  6_if_else.tc  7_loops.tc  8_switch_case.tc  9_structs.tc
project/test_suite/tests/: 0_empty.tc  10_pointers.tc  11_function_pointers.tc  14_complex_expression.tc  15_nested_blocks.tc  17_lexer_error.tc  18_extended_tester.tc  1_hello_world.tc  3_arithmetic.tc  4_logical.tc  5_functions.tc  6_if_else.tc  7_loops.tc  8_switch_case.tc
project/testing/: README.md  test_generator.py  test_runner.py
project/testing/json/: 0_empty.json  13_void_pointers.json  14_complex_expression.json  17_lexer_error.json  6_if_else.json
project/testing/tests/: 0_empty.tc  10_pointers.tc  11_function_pointers.tc  12_casting.tc  13_void_pointers.tc  14_complex_expression.tc  15_nested_blocks.tc  16_parser_error.tc  17_lexer_error.tc  18_extended_tester.tc  1_hello_world.tc  2_variables.tc  3_arithmetic.tc  4_logical.tc  5_functions.tc  6_if_else.tc  7_loops.tc  8_switch_case.tc  9_structs.tc
project/tests/lexer/: LexerTest.cpp
project/tests/parser/: ParserDeclarationTests.cpp  ParserExpressionTests.cpp  ParserStatementTests.cpp  ParserTest.cpp  ParserTypeTests.cpp
project/tests/unit/lexer/: LexerTest.cpp
project/tests/unit/parser/: ParserDeclarationTests.cpp  ParserErrorTests.cpp  ParserExpressionTests.cpp  ParserProgramTests.cpp  ParserStatementTests.cpp  ParserTest.cpp  ParserTypeTests.cpp  TinyCParserTestRunner.cpp
project/validator/: CMakeCache.txt  CMakeLists.txt  Makefile  ast-validator  ast-validator.cpp  cmake_install.cmake  example-ast.json  run_tests.sh  tinyc-ast-schema.json
project/validator/examples/: 10_pointers.json  11_function_pointers.json  12_casting.json  13_void_pointers.json  14_complex_expression.json  15_nested_blocks.json  16_parser_error.json  1_hello_world.json  2_variables.json  3_arithmetic.json  4_logical.json  5_functions.json  6_if_else.json  7_loops.json  8_switch_case.json  9_structs.json
